@@ -105,6 +105,12 @@ public enum ConfigNodes {
 			"0.0",
 			"",
 			"# Default amount for town's plottax costs."),
+	TOWN_DEF_TAXES_PLOT_TAX_PUTS_PLOT_FOR_SALE(
+			"town.default_taxes.plot_tax.does_non-payment_place_plot_for_sale",
+			"false",
+			"",
+			"# Does a player's plot get put up for sale if they are unable to pay the plot tax?",
+			"# When false the plot becomes town land and must be set up for-sale by town mayor or staff."),
 	TOWN_DEF_TAXES_TAXPERCENTAGE(
 			"town.default_taxes.taxpercentage",
 			"true",
